<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.enduser.lostpets.SignInActivity">

    <!-- TODO Figure out theme for UI -->
    <!-- TODO get images and logos for the start screen -->
    <ImageView
        tools:src="@mipmap/ic_launcher"
        android:id="@+id/iv_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:maxLines="1"
        android:layout_margin="24dp"
        android:padding="16dp"
        android:hint="Email Address"
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_password"
        android:maxLines="1"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="16dp"
        android:hint="Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bt_login"
        android:text="@string/sign_in_login"
        android:textSize="22sp"
        tools:text="Sign In"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bt_register"
        android:text="@string/register_signIn_activity"
        android:textSize="22sp"
        tools:text="Register"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/sign_in_forgot_password"
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
